styles/text.scss
/* ... */
.sn-heading__link:has(~ .sn-link),
.sn-link ~ .sn-heading__link {
  display: none;
}

/* blocks */
.sn-quote {
  border-left: 3px solid var(--theme-quoteBar);
  padding-left: .75rem;
  // nested elements don't need extra spacing (override the :where default)
  > *:first-child {
    margin-top: 0;
  }
  > *:last-child {
    margin-bottom: 0;
  }
}

.sn-media {
  --sn-media-max-h: 25vh;
  display: block;
  position: relative;
  max-width: 100%;
  max-height: var(--sn-media-max-h);
  width: fit-content;
  width: min(
    100%,
    calc(var(--sn-media-max-h) * var(--width) / var(--height)),
    calc(var(--width) * 1px)
  );
  aspect-ratio: var(--width) / var(--height);
  overflow: hidden;
}

.sn-media:has(.sn-media__error) {
  min-width: 50px;
  min-height: 50px;
}

.sn-media-autolink__loading {
  color: var(--theme-link);
  text-decoration: none;
  animation: fadeInOut 1s ease-in-out infinite alternate;
}

@keyframes fadeInOut {
  from { opacity: 0.5; }
  to { opacity: 1; }
}

.sn-media__img, .sn-media__video {
  display: block;
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
  width: auto;
  height: auto;
}

.sn-media__img--sized, .sn-media__video--sized {
  // we know the dimensions, let's fill the container
  width: 100%;
  height: 100%;
}

.sn-media__img:not(.sn-media__img--sized),
.sn-media__video:not(.sn-media__video--sized) {
  object-fit: contain;
  width: auto;
  max-width: 100%;
  max-height: var(--sn-media-max-h);
  aspect-ratio: var(--width) / var(--height);
}

.topLevel .sn-media {
  --sn-media-max-h: 35vh;
}

.sn-media__img {
  object-position: left top;
}

[data-sn-reader="true"] .sn-media__img {
  cursor: zoom-in;
}

.sn-media__error {
  container-type: inline-size;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.75rem;
  color: var(--bs-body-color);
  font-size: 0.875rem;
  line-height: 1.5;
  padding: 0.5rem;
  background-color: var(--theme-commentBg);
  border-radius: 0.4rem;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
  text-align: center;
  min-width: 50px;
  min-height: 50px;

  // ellipsis
  p {
    max-width: 75%;
    overflow: hidden;
    @container (max-width: 50px) {
      display: none;
    }
  }

  span {
    display: block;
    max-width: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
}

.sn-media__loading {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: var(--theme-commentBg);
}

// image can load very fast, fade in to avoid flashing
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.focused {
  outline: 2px solid var(--bs-info);
}

.sn-media.focused {
  width: fit-content;
}

/* in case media-or-link detects a link */
.sn-media:has(> .sn-media-autolink__loading) {
  display: inline !important;
}

.sn-media .outlawed {
  user-select: text;
  cursor: text;
}

.sn-gallery {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: var(--grid-gap);
  width: 100%;
  max-width: 100%;
}

.sn-image {
  cursor: zoom-in;
  min-width: 30%;
  max-width: 100%;
  object-position: left top;
}

.sn-link {
  color: var(--theme-link);
  text-decoration: none;
}

span + .sn-link {
  margin-left: 0px;
}

.sn-block-cursor {
  display: block;
  pointer-events: none;
  position: absolute;
}
.sn-block-cursor:after {
  content: '';
  display: block;
  position: absolute;
  top: -2px;
  width: 20px;
  border-top: 1px solid var(--bs-body-color);
  animation: CursorBlink 1.1s steps(2, start) infinite;
}
@keyframes CursorBlink {
  to {
    visibility: hidden;
  }
}

// embed wrapper
.sn-embed-wrapper {
  user-select: none;
  margin-top: calc(var(--grid-gap) * 0.5);
  margin-bottom: calc(var(--grid-gap) * 0.5);
  background-color: var(--theme-bg);
}

[contenteditable="true"] .sn-embed-wrapper--focus {
  outline: 2px solid rgb(60, 132, 244);
}

// work in progress loading state
.sn-embed-wrapper__loading {
  display: flex;
  flex-flow: row wrap;
  max-width: 350px;
  width: 100%;
  padding-right: 12px;
}

.sn-embed-wrapper__loading-message {
  justify-content: center;
  display: flex;
  flex-direction: column;
  border-radius: 0.4rem;
  height: 150px;
  width: 100%;
  padding: 1.5rem;
  background-color: var(--theme-commentBg);
}

.sn-embed-wrapper__loading-message svg {
  width: 24px;
  height: 24px;
  margin-bottom: 1rem;
  margin-left: -0.15rem;
}

.sn-embed-placeholder,
.sn-embed {
  max-width: 100%;
}

// embed containers
.sn-twitter-container,
.sn-nostr-container,
.sn-video-wrapper,
.sn-wavlake-wrapper,
.sn-spotify-wrapper {
  margin-top: calc(var(--grid-gap) * 0.5);
  margin-bottom: calc(var(--grid-gap) * 0.5);
  background-color: var(--theme-bg);
}

// twitter and nostr
.sn-twitter-container,
.sn-nostr-container {
  position: relative;
  overflow: hidden;
}

.sn-twitter-container iframe,
.sn-nostr-container iframe {
  border-radius: 13px;
}

.sn-nostr-container {
  margin-right: 15px;
}

/* Contained state (collapsed) */
.sn-embed-contained {
  overflow: hidden;
}

.sn-embed-contained.sn-embed--twitter,
.sn-embed-contained.sn-embed--nostr {
  height: 150px;
}

.topLevel .sn-embed-contained.sn-embed--twitter,
.topLevel .sn-embed-contained.sn-embed--nostr {
  height: 200px;
}

// overflow 'show full' button
.sn-embed-show-full {
  position: absolute;
  bottom: 0;
  left: 0;
  border-radius: 0;
  line-height: 1.2;
  padding: .75rem 1rem;
}

// video wrapper and container
.sn-video-wrapper {
  max-width: 320px;
  width: 100%;
}

.sn-video-wrapper:not(:first-child) {
  margin-top: .75rem;
}

.topLevel .sn-video-wrapper {
  max-width: 640px;
  margin: 0.75rem 0;
}

.sn-video-container {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
  overflow: hidden;
}

.sn-video-container iframe {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}
/* ... */

